src/scss/elements/carousel.scss
.carousel {
  &[data-carousel-type="steps"] {
  }

  &[data-carousel-type="free-scroll"] {
  }

  // &-container,
  // &-items,
  // &-item {
  //   all: initial;
  // }

  &-container {
    // @extend .swiper-container;
  }

  &-items {
    // @extend .swiper-wrapper;
  }

  &-item {
    display: initial;
    float: initial;
    margin-right: initial;
    backface-visibility: initial;
    transition: initial;
  }

  &-nav {
    &-left,
    &-right {
      position: absolute;
      width: 48px;
      height: 48px;
      top: 50%;
      margin-top: -24px;
      background: #ffffff;
      box-shadow: 0px 28px 40px -1px rgba(14, 31, 53, 0.12);
      border-radius: 24px;
      z-index: 2;

      svg {
        width: 24px;
        height: 24px;

        path: {
          fill: #2e2b45;
        }
      }
    }

    &-left {
      left: 0;
      margin-left: -12px;
    }

    &-right {
      right: 0;
      margin-right: -12px;
    }
  }
}

